# surgishop_reports

./: .gitignore  EXPORT_SCRIPT.js  INSTALLATION.md  LICENSE  MODULES_NOTE.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  import_print_formats.py  import_reports.py  license.txt  populate_report_jsons.py  pyproject.toml  setup.py  surgishop_print_formats_export.json  surgishop_reports_export.json  update_report_jsons.py
surgishop_reports/: hooks.py  modules.txt
surgishop_reports/accounts/print_format/surgi_credit_memo/: surgi_credit_memo.json
surgishop_reports/accounts/print_format/surgi_customer_statement/: surgi_customer_statement.json
surgishop_reports/accounts/print_format/surgi_open_items_statement/: surgi_open_items_statement.json
surgishop_reports/accounts/print_format/surgi_sales_invoice/: surgi_sales_invoice.json
surgishop_reports/accounts/print_format/surgi_transaction_statement/: surgi_transaction_statement.json
surgishop_reports/accounts/report/daily_eod_sales_detail/: daily_eod_sales_detail.json
surgishop_reports/accounts/report/sent_sales_invoices/: sent_sales_invoices.json  sent_sales_invoices.py
surgishop_reports/accounts/report/shipped_batch_expiry_report/: shipped_batch_expiry_report.json
surgishop_reports/accounts/report/surgi_general_ledger/: surgi_general_ledger.json
surgishop_reports/config/: desktop.py
surgishop_reports/selling/print_format/surgi_sales_order/: surgi_sales_order.json
surgishop_reports/selling/print_format/surgi_sales_quote/: surgi_sales_quote.json
(+15 files in other folders)
